--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <link
-      rel="stylesheet"
-      href=""
-    />
-    <style></style>
-    <title>Document</title>
+    <title>Мої JavaScript</title>
   </head>
   <body>
     <script src="./js/task-1.js"></script>
