--- a/index.html
+++ b/index.html
@@ -6,11 +6,25 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Мої JavaScript</title>
+    <title>JavaScript Tasks</title>
+    <link
+      rel="stylesheet"
+      href="./styles.css"
+    />
   </head>
   <body>
-    <script src="./js/task-1.js"></script>
-    <script src="./js/task-2.js"></script>
-    <script src="./js/task-3.js"></script>
+    <h1>JavaScript Tasks</h1>
+    <script
+      type="module"
+      src="./js/task-1.js"
+    ></script>
+    <script
+      type="module"
+      src="./js/task-2.js"
+    ></script>
+    <script
+      type="module"
+      src="./js/task-3.js"
+    ></script>
   </body>
 </html>
