--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>JavaScript Tasks</title>
-    <link
+    <!-- <link
       rel="stylesheet"
       href="./styles.css"
-    />
+    /> -->
   </head>
   <body>
     <h1>JavaScript Tasks</h1>
